[gd_scene load_steps=2 format=3 uid="uid://n3v1mvmtakc"]

[ext_resource type="Script" path="res://scences/ui/player_card/card_menu_ui/card_tooltip.gd" id="1_lg5lu"]

[node name="CardTooltip" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = -284.0
offset_bottom = -131.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lg5lu")

[node name="TooltipBackground" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 50.0
offset_right = 115.0
offset_bottom = 44.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="TooltipBackground"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipBackground/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="CardDescription" type="RichTextLabel" parent="TooltipBackground/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
